tyk-pro/prod/route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tyk-dashboard
  namespace: tyk
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - kind: Rule
    match: Host(`tyk.rss3.io`)
    services:
    - name: dashboard-svc-tyk-pro
      port: 3000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tyk-gw
  namespace: tyk
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - kind: Rule
    match: Host(`tyk-gw.rss3.io`)
    services:
    - name: gateway-svc-tyk-pro
      port: 8080
